--- a/.azure-pipelines/weekly-generation.yml
+++ b/.azure-pipelines/weekly-generation.yml
@@ -14,8 +14,8 @@ parameters:
 - name: BaseBranch
   displayName: Base Branch
   default: main
-- name: SkipForceRefresh
-  displayName: Skip Force Refresh
+- name: SkipOpenAPIDocsDownload
+  displayName: Skip OpenAPI Docs Download (also skips branch creation and PR)
   default: false
   type: boolean
 - name: Test
@@ -30,10 +30,6 @@ parameters:
 - name: CreatePullRequest
   type: boolean
   default: true
-- name: SkipOpenAPIDocsDownload
-  displayName: Skip OpenAPI Docs Download
-  default: false
-  type: boolean
 - name: SpecifyModules
   displayName: Specify Modules to Generate
   default: false
@@ -47,7 +43,6 @@ variables:
   Branch: "WeeklyApiRefresh"
   BaseBranch: ${{ parameters.BaseBranch }}
   BuildAgent: ${{ parameters.BuildAgent }}
-  SkipForceRefresh: ${{ parameters.SkipForceRefresh }}
 trigger: none
 pr: none
 schedules:
@@ -85,12 +80,10 @@ extends:
         timeoutInMinutes: 1200
         steps:
         - template: .azure-pipelines/common-templates/download-openapi-docs.yml@self
-          #condition: eq('${{ parameters.SkipOpenAPIDocsDownload }}', false)
           parameters:
             Branch: $(Branch)
             BaseBranch: $(BaseBranch)
             BuildAgent: $(BuildAgent)
-            SkipForceRefresh: $(SkipForceRefresh)
             SkipOpenAPIDocsDownload: ${{ parameters.SkipOpenAPIDocsDownload }}
       
       - job: SetUpModuleMatrix
@@ -102,10 +95,6 @@ extends:
           WeeklyBranch: $[ dependencies.RefreshOpenAPIDocuments.outputs['ComputeBranch.WeeklyBranch'] ]
           ModulesToUpdate: $[ dependencies.RefreshOpenAPIDocuments.outputs['OpenAPIDocDiff.ModulesWithChanges'] ]
         steps:
-        # - template: .azure-pipelines/common-templates/checkout.yml@self
-        #   parameters:
-        #     TargetBranch: $(WeeklyBranch)
-
         - task: PowerShell@2
           name: CreateMatrixJson
           displayName: Create Matrix Json 
@@ -191,7 +180,7 @@ extends:
         dependsOn:
           - MsGraphPsSdkWeeklyGeneration
           - RefreshOpenAPIDocuments
-        condition: and(succeeded(), eq(dependencies.MsGraphPsSdkWeeklyGeneration.result, 'Succeeded'), eq(${{ parameters.CreatePullRequest }}, true))
+        condition: and(succeeded(), eq(dependencies.MsGraphPsSdkWeeklyGeneration.result, 'Succeeded'), eq(${{ parameters.CreatePullRequest }}, true), eq(${{ parameters.SkipOpenAPIDocsDownload }}, false))
         variables:
           WeeklyBranch: $[ dependencies.RefreshOpenAPIDocuments.outputs['ComputeBranch.WeeklyBranch'] ]
         steps:
